@@ -23,8 +23,7 @@
 package org.gjt.sp.jedit;
 
 import com.microstar.xml.*;
-import java.io.BufferedReader;
-import java.io.InputStreamReader;
+import java.io.*;
 import java.net.URL;
 import java.util.*;
 import org.gjt.sp.util.Log;
@@ -104,7 +103,7 @@ public class ServiceManager
 			parser.setHandler(dh);
 			in = new BufferedReader(
 				new InputStreamReader(
-				uri.openStream()))
+				uri.openStream()));
 			parser.parse(null, null, in);
 			if(cache != null)
 				cache.cachedServices = dh.getCachedServices();
